# legacy-code

OE/ossie_collection/: ossie-c-wavloader_svn.bb  ossie-channeldemo_svn.bb  ossie-demo_svn.bb  ossie-gpp-device_svn.bb  ossie-gpp-node_svn.bb  ossie-image.bb  ossie-interpolator_svn.bb  ossie-modulator_svn.bb  ossie-nodebooter_svn.bb  ossie-randombits_svn.bb  ossie-rxdemo_svn.bb  ossie-sigproc_svn.bb  ossie-soundout-device_svn.bb  ossie-standardinterfaces_svn.bb  ossie-tx-random-data_svn.bb  ossie-txdemo_svn.bb  ossie-usrp-device_svn.bb  ossie-usrp-tx-control_svn.bb  ossiecf_svn.bb  task-ossie.bb
beagle-sdr/: adc_fifo.cmp  adc_fifo.qip  blondie.vhd  decim.vhd  eastwood.qpf  eastwood.qsf  eastwood.restore.rpt  eastwood.sdc  gr-spi_0.2.bb  harry.vhd  interp.vhd  rx_fifo.cmp  rx_fifo.qip  rx_fifo.vhd  shiftreg12.cmp  shiftreg14.cmp  shiftreg14.qip  shiftreg8.cmp  shiftreg8.vhd  todo.txt  tx_fifo.qip  tx_fifo.vhd  xmastree.vhd
beagle-sdr/Beat-army/: Beat-army.qpf  Beat-army.qsf  Beat-army.restore.rpt  assignment_defaults.qdf  rx_buffer.v  top_level.v
beagle-sdr/Beat-army/db/: Beat-army.cmp.rdb  Beat-army.db_info  Beat-army.restore.qmsg
beagle-sdr/db/: eastwood.db_info  eastwood.restore.qmsg  eastwood.sim.cvwf
beagle-sdr/eastwood/: adc_fifo.vhd  assignment_defaults.qdf  blondie.vhd  control_spi_slave_test.vwf  dac_fifo.cmp  dac_fifo.qip  dac_fifo.vhd  data_spi_slave_test.vwf  eastwood.dpf  eastwood.qsf  eastwood.qws  eastwood.sof  eastwood.vhd  register_file.vhd  rx_fifo.qip  rx_fifo.vhd  shiftreg12.qip  shiftreg12.vhd  shiftreg14.vhd  shiftreg8.qip  tx_fifo.cmp  tx_fifo.qip  tx_fifo.vhd
beagle-sdr/eastwood/db/: eastwood.cmp.rdb  eastwood.sim.cvwf
beagle-sdr/gr-spi/: AUTHORS  Makefile.am  aclocal.m4  configure.ac
beagle-sdr/gr-spi/doc/: Makefile
beagle-sdr/gr-spi/misc/: README  dump_data.c  gr-spi_0.1.bb  peek_poke.c  spi_source_test.py  spi_srcsink_test.py
beagle-sdr/gr-spi/src/lib/: Makefile.am  Makefile.swig.gen  gr_spi.i  gr_spi_source_s.cc  gr_spi_source_s.h  gr_spi_srcsink_ss.cc  gr_spi_srcsink_ss.h  spi.i  spi_srcsink_ss.cc  spi_srcsink_ss.h
beagle-sdr/s3e-test/Expansion_test/: Expansion_test.ipf  Expansion_test.ise  Expansion_test.ucf  lcd_display.v  lcd_write_number.v  lcd_write_number_test.v  toplevel.v
beagle-sdr/s3e-test/gpmc_test/: gpmc_test.ise  gpmc_test.ntrc_log  gpmc_test.restore  gpmc_test.ucf  toplevel.cmd_log  toplevel.ngc  toplevel.ngr  toplevel.prj  toplevel.syr  toplevel.v  toplevel.xst  toplevel_summary.html  toplevel_xst.xrpt
beagle-sdr/spi-utils/: dump_data.c  peek_poke.c
sca/SigProc/trunk/: Makefile.am  SigProc.h  butter.cpp  configure.ac  filters.cpp  modem.cpp  pll.cpp  scaling.cpp  (+3 more)
sca/components/resampler/trunk/: Doxyfile  Makefile.am  RationalResamplerComplexShort.cpp  RationalResamplerComplexShort.h  RationalResamplerComplexShort.spd.xml  configure.ac  documentation.txt  main.cpp  resampler.cpp  resampler.spd.xml
sca/components/user-processing/trunk/: Makefile.am  configure.ac  ignore  main.cpp  user-processing.cpp  user-processing.h  user-processing.prf.xml  user-processing.scd.xml  user-processing.spd.xml
sca/ossie-sca/trunk/: Doxyfile  Makefile.am  configure.ac  reconf
sca/ossie-sca/trunk/framework/: ApplicationFactory_impl.cpp  Application_impl.cpp  DeviceManager_impl.cpp  Device_impl.cpp  DomainManager_impl.cpp  FileManager_impl.cpp  FileSystem_impl.cpp  File_impl.cpp  LifeCycle_impl.cpp  Makefile.am  PortSupplier_impl.cpp  PropertySet_impl.cpp  Resource_impl.cpp  TestableObject_impl.cpp  applicationSupport.cpp  debug.cpp  helperFunctions.cpp  ossieComponent.cpp
sca/ossie-sca/trunk/idl/: Makefile.am  cf.idl
sca/ossie-sca/trunk/include/ossie/: ApplicationFactory_impl.h  Application_impl.h  ComponentAssemblyParser.h  ComponentInstantiation.h  ComponentPlacement.h  Connection.h  DCDComponentInstantiation.h  DCDComponentPlacement.h  DCDConnectionParser.h  DCDInstantiationProperty.h  DCDParser.h  DMDParser.h  DeviceManager_impl.h  Device_impl.h  DomainManager_impl.h  FileManager_impl.h  FileSystem_impl.h  File_impl.h  InstantiationProperty.h  LifeCycle_impl.h  Makefile.am  OS_config.h  PRFParser.h  Port.h  PortSupplier_impl.h  Port_impl.h  PropertySet_impl.h  Resource_impl.h  SADComponentFile.h  SADComponentInstantiation.h  SADParser.h  SCDParser.h  SPDAuthor.h  SPDImplementation.h  SPDParser.h  SPDUsesDevice.h  TestableObject_impl.h  UsesPort.h  automaticTest.h  debug.h  (+7 more)
sca/ossie-sca/trunk/parser/: ComponentAssemblyParser.cpp  ComponentInstantiation.cpp  ComponentPlacement.cpp  ComponentSupportedInterface.cpp  Connection.cpp  DCDComponentPlacement.cpp  DCDInstantiationProperty.cpp  DCDParser.cpp  DMDParser.cpp  EventChannelSupport.cpp  ExternalPort.cpp  FindBy.cpp  Makefile.am  ORB.cpp  PRFParser.cpp  PRFProperty.cpp  PRFSimpleProperty.cpp  PRFSimpleSequenceProperty.cpp  Port.cpp  ProvidesPort.cpp  SADComponentInstantiation.cpp  SADComponentPlacement.cpp  SADHostCollocation.cpp  SADParser.cpp  SCDParser.cpp  SPDAuthor.cpp  SPDImplementation.cpp  SPDParser.cpp  SPDUsesDevice.cpp  UsesPort.cpp  dcd_helpers.cpp  orb_wrap.cpp  ossieparser.cpp  ossieparser.vcproj  prop_helpers.cpp
sca/platform/Sound_out/trunk/: Makefile.am  configure.ac  main.cpp  soundCardPlayback.cpp  soundCardPlayback.h  soundCardPlayback.spd.xml
sca/platform/USRP/trunk/: Makefile.am  USRP.cpp  USRP.h  configure.ac  db_base.cpp  db_base.h  dbsrx.cpp  flex.h  main.cpp  port_impl.cpp
sca/platform/USRP/trunk/src/: USRP.cpp  basic.h  flex.cpp  lf.h
sca/platform/USRP/trunk/xml/: USRP.spd.xml
sca/standardInterfaces/trunk/: Makefile.am  complexChar_u.cpp  complexDouble_u.cpp  complexFloat_u.cpp  complexLong_u.cpp  complexShort_u.cpp  configure.ac  realChar_p.cpp  realChar_u.cpp  realDouble_u.cpp  realFloat_u.cpp  realLong_u.cpp  realShort_u.cpp  realString.idl  realString_p.cpp  realString_u.cpp  standardInterfaces.pc.in
sca/standardInterfaces/trunk/include/standardinterfaces/: Makefile.am  realChar_p.h  realString_p.h  realString_u.h
sca/waveforms/user-processing/trunk/: Makefile.am  configure.ac  user-processing.sad.xml  user-processing_DAS.xml
(+197 files in other folders)
