AM_CXXFLAGS = -Wall 

bin_PROGRAMS = RationalResamplerComplexShort

RationalResamplerComplexShort_SOURCES = RationalResamplerComplexShort.cpp RationalResamplerComplexShort.h main.cpp

ossieName = RationalResamplerComplexShort
xmldir = $(prefix)/dom/xml/$(ossieName)
bindir = $(prefix)/dom/bin
dist_xml_DATA = RationalResamplerComplexShort.prf.xml RationalResamplerComplexShort.scd.xml \
RationalResamplerComplexShort.spd.xml 

