AM_CXXFLAGS = -Wall 

ossieName = user-processing

bin_PROGRAMS = user-processing

user_processing_SOURCES = user-processing.cpp user-processing.h main.cpp

xmldir = $(prefix)/dom/xml/$(ossieName)
bindir = $(prefix)/dom/bin
dist_xml_DATA = $(ossieName).prf.xml $(ossieName).scd.xml \
$(ossieName).spd.xml 

